--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,12 @@ flutter_launcher_icons:
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "path/to/image.png"
+    image_path: "images/launcher_icon.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path: "path/to/image.png"
+    image_path: "images/launcher_icon.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
